# python4univ

./: README.md
.github/workflows/: ci-cd.yml
practices/: Python_and_CUDA.ipynb  binding.md  clean_code.md  databases.md  oop_patterns.md  package.md  packages.md  python_style.md  testing.md  web.md
practices/code/package-demo/: README.md  pyproject.toml  requirements-test.txt  tox.toml
practices/code/package-demo/docs/source/: conf.py  index.rst
practices/code/package-demo/src/package-demo/: moduleA.py
practices/code/package-demo/src/package_demo/: __init__.py
practices/code/package-demo/src/package_demo/submodule/: __init__.py
practices/code/package-demo/tests/: test_package_demo.py
practices/code/testing/doctest/: output.txt  run.sh
practices/code/testing/pytest_unittest/: output.txt  run.sh  test.py
practices/code/testing/tox/: output.txt  run.sh  sample.py  test.py  tox.toml
practices/code/testing/unittest/: run.sh  sample.py  test.py
practices/code/web/requests/: simple.py
practices/code/web/sockets/: client.py  server.py
tasks/: apps.md  packages.md
